<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.8</version>
        <relativePath/> <!-- Lookup parent from repository -->
    </parent>
    <groupId>com.embabel.template</groupId>
    <artifactId>gekko</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>Gekko</name>
    <properties>
        <java.version>25</java.version>
        <embabel-agent.version>0.3.1-SNAPSHOT</embabel-agent.version>
        <!--        <spring-ai.version>1.1.2</spring-ai.version>-->
    </properties>

    <!--    <dependencyManagement>-->
    <!--        <dependencies>-->
    <!--            <dependency>-->
    <!--                <groupId>org.springframework.ai</groupId>-->
    <!--                <artifactId>spring-ai-bom</artifactId>-->
    <!--                <version>${spring-ai.version}</version>-->
    <!--                <type>pom</type>-->
    <!--                <scope>import</scope>-->
    <!--            </dependency>-->
    <!--        </dependencies>-->
    <!--    </dependencyManagement>-->

    <dependencies>

        <!-- Main Dependencies -->
        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-starter</artifactId>
            <version>${embabel-agent.version}</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>com.embabel.agent</groupId>-->
        <!--            <artifactId>embabel-agent-starter-shell</artifactId>-->
        <!--            <version>${embabel-agent.version}</version>-->
        <!--        </dependency>-->

        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-starter-ollama</artifactId>
            <version>${embabel-agent.version}</version>
        </dependency>

        <dependency>
            <groupId>com.embabel.agent</groupId>
            <artifactId>embabel-agent-test</artifactId>
            <version>${embabel-agent.version}</version>
            <scope>test</scope>
        </dependency>


        <!-- Unit and Integration Testing -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>

        <!-- Spring Boot Actuator for observability support -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-actuator</artifactId>
        </dependency>

        <!-- Micrometer Observation -> OpenTelemetry bridge -->
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-tracing</artifactId>
        </dependency>
        <dependency>
            <groupId>io.micrometer</groupId>
            <artifactId>micrometer-tracing-bridge-otel</artifactId>
        </dependency>
        <dependency>
            <groupId>io.opentelemetry</groupId>
            <artifactId>opentelemetry-exporter-otlp</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>com.yahoofinance-api</groupId>
            <artifactId>YahooFinanceAPI</artifactId>
            <version>3.17.0</version>
        </dependency>
        <dependency>
            <groupId>org.ta4j</groupId>
            <artifactId>ta4j-core</artifactId>
            <version>0.18</version>
        </dependency>


        <!-- Web UI -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-devtools</artifactId>
            <scope>runtime</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-thymeleaf</artifactId>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.graalvm.buildtools</groupId>
                <artifactId>native-maven-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>openai-models</id>
            <activation>
                <property>
                    <name>env.OPENAI_API_KEY</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.embabel.agent</groupId>
                    <artifactId>embabel-agent-starter-openai</artifactId>
                    <version>${embabel-agent.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>anthropic-models</id>
            <activation>
                <property>
                    <name>env.ANTHROPIC_API_KEY</name>
                </property>
            </activation>
            <dependencies>
                <dependency>
                    <groupId>com.embabel.agent</groupId>
                    <artifactId>embabel-agent-starter-anthropic</artifactId>
                    <version>${embabel-agent.version}</version>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.springframework.boot</groupId>
                        <artifactId>spring-boot-maven-plugin</artifactId>
                        <configuration>
                            <classifier>exec</classifier>
                            <excludes>
                                <exclude>
                                    <groupId>org.projectlombok</groupId>
                                    <artifactId>lombok</artifactId>
                                </exclude>
                            </excludes>
                            <image>
                                <builder>paketobuildpacks/builder-jammy-buildpackless-tiny</builder>
                                <buildpacks>
                                    <buildpack>paketobuildpacks/oracle</buildpack>
                                    <buildpack>paketobuildpacks/java-native-image</buildpack>
                                </buildpacks>
                            </image>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <!-- Uncomment these lines to enable Embabel repositories and use snapshots -->
    <!--    <repositories>-->
    <!--        <repository>-->
    <!--            <id>embabel-releases</id>-->
    <!--            <url>https://repo.embabel.com/artifactory/libs-release</url>-->
    <!--            <snapshots>-->
    <!--                <enabled>false</enabled>-->
    <!--            </snapshots>-->
    <!--        </repository>-->
    <!--        <repository>-->
    <!--            <id>embabel-snapshots</id>-->
    <!--            <url>https://repo.embabel.com/artifactory/libs-snapshot</url>-->
    <!--            <releases>-->
    <!--                <enabled>false</enabled>-->
    <!--            </releases>-->
    <!--            <snapshots>-->
    <!--                <enabled>true</enabled>-->
    <!--            </snapshots>-->
    <!--        </repository>-->
    <!--    </repositories>-->

</project>
